Added QoL improvements based on testing results.